# MyCpp

./: README.md
Exercises_Implement/: Exe_imp_1.cpp  Exe_imp_2.cpp  Exe_imp_3.cpp  Exe_imp_4.cpp  Exe_imp_5.cpp  Exe_imp_6.cpp  Exe_imp_7.cpp  Exe_imp_8.cpp  InOut.hpp  README.md  testing.hpp
Foundation_in_programming/: myProgramingRules.txt  program_1.cpp  program_10.cpp  program_11.cpp  program_12.cpp  program_13.cpp  program_14.cpp  program_15.cpp  program_16.cpp  program_17.cpp  program_18.cpp  program_19.cpp  program_2.cpp  program_20.cpp  program_21.cpp  program_22.cpp  program_23.cpp  program_24.cpp  program_25.cpp  program_26.cpp  program_27.cpp  program_28.cpp  program_29.cpp  program_3.cpp  program_30.cpp  program_31.cpp  program_32.cpp  program_33.cpp  program_34.cpp  program_35.cpp  program_36.cpp  program_37.cpp  program_38.cpp  program_39.cpp  program_4.cpp  program_40.cpp  program_41.cpp  program_42.cpp  program_43.cpp  program_44.cpp  (+33 more)
Implement_functions/: imp_fun_1.cpp  imp_fun_10.cpp  imp_fun_11.cpp  imp_fun_12.cpp  imp_fun_13.cpp  imp_fun_14.cpp  (+14 more)
my_mini_framework/CXXVector_MFW/V1/: CMakeLists.txt  LICENSE  MyNote.txt
my_mini_framework/CXXVector_MFW/V1/MFW/: CXXVector.hpp  README.md  multidimensional_vectors.hpp  pair_vector.hpp  vector_functions.hpp
my_mini_framework/CXXVector_MFW/V1/testing_files/test_help_files/: CXXLite.hpp  CXXTesting.hpp  function_stream.hpp
my_mini_framework/CXXVector_MFW/V1/testing_files/utest/: utest_functions.cpp  utest_pair_vector.cpp  utest_vector.cpp  utest_vector_2d.cpp  utest_vector_3d.cpp  utest_vstream.cpp
(+79 files in other folders)
